# python-project-83

./: Makefile  Procfile  README.md  build.sh  database.sql  package-lock.json  pyproject.toml  render.yaml  sonar-project.properties  tmp_hexlet.html
.github/workflows/: ci.yml
app/: __init__.py  routes.py
page_analyzer/: __init__.py  app.py  data_base.py  parser.py  url_validator.py
page_analyzer/templates/: base.html  footer.html  header.html  index.html  url.html  urls.html
page_analyzer/templates/errors/: 404.html  500.html
tests/: test_app.py  test_parser.py  test_pyproject.py  test_repository.py  test_url_validator.py
