[project]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet Page Analyzer — Flask app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0.0,<4.0.0",
  "gunicorn>=21.2.0,<22.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "psycopg2-binary>=2.9.9,<3.0.0",
  "requests>=2.31.0,<3.0.0",
  "validators>=0.20.0,<1.0.0",
  "beautifulsoup4>=4.12.0,<5.0.0",
  "lxml>=5.2.0,<6.0.0",
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]


[tool.uv]
# Опционально: укажи Python
# python-version = "3.12"

[dependency-groups]
dev = [
  "ruff",
  "pytest",
]

[tool.ruff]
line-length = 80
src = ["page_analyzer"]  # помогает распознать first-party код

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["page_analyzer"]

[tool.uv]
dev-dependencies = [
  "ruff>=0.5.0,<1.0.0",
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "waitress>=2.1.2,<3.0.0",
]
